# rust-game

./: Cargo.toml  README.md  index.html  main.ts  package-lock.json  package.json  styles.css  tsconfig.json
scripts/: transform.ts  transformations.json
src/: lib.rs
src/game/: assets_loader.rs  declaration.rs  error.rs  game.rs  handler.rs  logic.rs  mod.rs  renderer.rs
src/game/math/: mat.rs  mod.rs  transformation.rs  vec.rs
