[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4"
thiserror = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "EventTarget",
    "Event",
    "CustomEvent",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
]
